dou hermanooooo la pam,mmmmmmela

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>Argentina</h1>
       <p>Pulsa un botón.</p>
       <div class="buttons" role="group" aria-label="Grupo de botones">
-        <button id="btn1" type="button">un bizcochO</button>
+        <button id="btn1" type="button">un bizcocho</button>
         <button id="btn2" type="button">pedritovm</button>
         <button id="btn3" type="button">la papa</button>
         <button id="btn4" type="button">una batidora</button>
