--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   p{margin:0 0 14px;color:#444}
   .buttons{display:flex;gap:12px;margin-bottom:14px}
   
-  button{padding:12px 18px;border:1px solid rgba(0,0,0,0.08);background:rgba(255,255,255,0.95);color:#111;border-radius:8px;cursor:pointer;font-size:1rem;font-weight:600}
+  button{padding:12px 18px;border:1px solid rgba(0,0,0,0.08);background:rgba(255, 255, 255, 0.95);color:#111;border-radius:8px;cursor:pointer;font-size:1rem;font-weight:600}
   button:active{transform:translateY(1px)}
-  .output{padding:10px;border-radius:8px;background:#f7f7f7;border:1px solid #e6e6e6;color:#000000}
+  .output{padding:10px;border-radius:8px;background:#ffffff;border:1px solid #e6e6e6;color:#000000}
     </style>
   </head>
   <body>
@@ -34,12 +34,21 @@
     </main>
 
     <script>
-      const output = document.getElementById('output');
-      document.querySelectorAll('.buttons button').forEach(btn => {
-        btn.addEventListener('click', () => {
-          output.textContent = 'Has pulsado: ' + btn.textContent;
-        });
-      });
+  let texto_a_cambiar = document.getElementById("subtitulos");
+  function cambioTexto(){
+    texto_a_cambiar.innerHTML: "USO DE JAVASCRIPT";
+  
+  }
+  function azul (){
+    texto_a_cambiar.style.backrroundcolor = "blue";
+
+  } 
+   function rojo(){
+    texto_a_cambiar.style.backrroundcolor = "red";
+    texto_a_cambiar.style.display = "none";   }
+     
+    function verde ()
+    texto_a_cambiar.style.backrroundcolor = "green";
     </script>
   </body>
 </html>
