--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button id="btn2" type="button">pedritovm</button>
         <button id="btn3" type="button">la papa</button>
         <button id="btn4" type="button">una batidora</button>
-        <button id="btn5" type="button">la pame</button>
+        <button id="btn5" type="button">la pamelardovich</button>
       </div>
       <div id="output" class="output" aria-live="polite">Aquí se mostrará la acción.</div>
     </main>
@@ -43,12 +43,13 @@
     texto_a_cambiar.style.backrroundcolor = "blue";
 
   } 
-   function rojo(){
+   function rojo (){
     texto_a_cambiar.style.backrroundcolor = "red";
     texto_a_cambiar.style.display = "none";   }
      
-    function verde ()
+    function verde (){
     texto_a_cambiar.style.backrroundcolor = "green";
+    }
     </script>
   </body>
 </html>
