QUE FELICIDAD GANO BOCA

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Página simple</title>
+    <title>Seleccion Argentina</title>
     <style>
      
   html,body{height:100%;margin:0}
@@ -28,7 +28,7 @@
   .col p{margin:0;color:#222;transition:transform .14s ease, color .14s ease;transform-origin:center left}
   .col:hover p{transform:scale(1.04)}
 
-  @media (max-width:920px){
+  (max-width:920px){
     .layout{grid-template-columns:1fr}
     .buttons{flex-wrap:wrap}
   }
@@ -38,27 +38,27 @@
     <div class="layout">
       <main class="card" role="main">
         <h1>Argentina</h1>
-        <p>Pulsa un botón.</p>
+        <p>Elige un boton</p>
         <div class="buttons" role="group" aria-label="Grupo de botones">
-          <button id="btn1" type="button">un bizcocho</button>
-          <button id="btn2" type="button">pedritovm</button>
-          <button id="btn3" type="button">la papa</button>
-          <button id="btn4" type="button">una batidora</button>
-          <button id="btn5" type="button">la pamelardovich</button>
+          <button id="btn1" type="button">Argentina la mejor</button>
+          <button id="btn2" type="button">Messi jugadorazo</button>
+          <button id="btn3" type="button">Aguante la scaloneta</button>
+          <button id="btn4" type="button">Aguante Boca</button>
+          <button id="btn5" type="button">Argentina el mejor pais</button>
         </div>
-        <div id="output" class="output" aria-live = "polite">Aquí se mostrará la acción.</div>
+        <div id="output" class="output" aria-live = "polite">ARGENTINA FOREVER</div>
       </main>
 
       <aside class="aside" aria-label="Columna lateral">
         <section class="columns" aria-label="Tres filas de texto">
           <div class="col">
-            <p>holaaaaaaa</p>
+            <p>ARGENTINA</p>
           </div>
           <div class="col">
-            <p>gano boca</p>
+            <p>MESSI DIOS</p>
           </div>
           <div class="col">
-            <p>anashe</p>
+            <p>BOCA JUNIORS</p>
           </div>
         </section>
       </aside>
