UNA BATIDORA WACHO, GANO BOCAAAAAAAAAAAAAAA DOU

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       const body = document.body;
 
       const colores = {
-        btn1: '#ff007f', 
-        btn2: '#ff8a00', 
-        btn3: '#00d084', 
-        btn4: '#00bfff', 
-        btn5: '#ffea00'  
+        btn1: '#87CEEB', 
+        btn2: '#ffffff', 
+        btn3: '#ffea00', 
+        btn4: '#0000ff', 
+        btn5: '#f5f5dc'  
       };
       
       
